<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="320dp"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_rounded_dialog"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:text="@string/exit_the_game"
        android:textAlignment="center"
        android:textColor="@color/main_gray"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/sub_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="@string/your_statistics_will_be_lost"
        android:textAlignment="center"
        android:textColor="@color/main_gray"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_accept"
        android:layout_width="130dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/alert_orange"
        android:text="@string/accept"
        android:textAlignment="center"
        android:textColor="@color/secondary_yellow"
        android:textSize="20sp"
        app:cornerRadius="8dp"
        android:layout_marginEnd="22dp"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintEnd_toStartOf="@id/btn_cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sub_title" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_cancel"
        android:layout_width="130dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/main_blue"
        android:text="@string/resume"
        android:textAlignment="center"
        android:textColor="@color/secondary_yellow"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@id/btn_accept"
        app:cornerRadius="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sub_title" />

</androidx.constraintlayout.widget.ConstraintLayout>