<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/secondary_yellow"
    tools:context=".presentation.score.ScoreFragment">

    <ProgressBar
        android:id="@+id/progress_circular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminateTint="@color/main_blue"
        android:progressTint="@color/main_yellow"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageButton
        android:id="@+id/btn_exit"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="6dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/btn_exit"
        android:contentDescription="@string/exit_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/score"
        android:textColor="@color/main_gray"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_errors"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/main_orange"
        android:text="@string/errors_button"
        android:textAlignment="center"
        android:textColor="@color/secondary_yellow"
        android:textSize="16sp"
        app:layout_constraintVertical_chainStyle="packed"
        app:cornerRadius="12dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toStartOf="@id/btn_attempts"
        app:layout_constraintTop_toBottomOf="@id/tv_title" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_attempts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/secondary_blue"
        android:text="@string/attempts_button"
        android:textAlignment="center"
        android:textColor="@color/secondary_yellow"
        android:textSize="16sp"
        app:cornerRadius="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_success"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/main_green"
        android:text="Success"
        android:textAlignment="center"
        android:textColor="@color/secondary_yellow"
        android:textSize="16sp"
        app:layout_constraintVertical_chainStyle="packed"
        android:layout_marginStart="10dp"
        app:cornerRadius="12dp"
        app:layout_constraintStart_toEndOf="@id/btn_attempts"
        app:layout_constraintTop_toBottomOf="@id/tv_title" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="140dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_success" />

    <TextView
        android:id="@+id/tv_no_statistics"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/no_statistics"
        android:textAlignment="center"
        android:textColor="@color/main_gray"
        android:textSize="18sp"
        android:textStyle="italic"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>