<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="12dp"
    android:layout_marginVertical="6dp"
    app:cardElevation="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/secondary_green">

        <ImageView
            android:id="@+id/iv_digimon"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_margin="8dp"
            android:contentDescription="@string/digimon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tag_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="12dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/tag_name"
            android:textColor="@color/main_gray"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@id/iv_digimon"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="12dp"
            android:fontFamily="sans-serif"
            android:textColor="@color/main_gray"
            android:textSize="18sp"
            android:textStyle="italic"
            app:layout_constraintStart_toEndOf="@id/tag_name"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Koromon" />

        <TextView
            android:id="@+id/tag_level"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/level"
            android:textColor="@color/main_gray"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@id/iv_digimon"
            app:layout_constraintTop_toBottomOf="@id/tag_name"/>

        <TextView
            android:id="@+id/tv_level"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="8dp"
            android:fontFamily="sans-serif"
            android:textColor="@color/main_gray"
            android:textSize="18sp"
            android:textStyle="italic"
            app:layout_constraintStart_toEndOf="@id/tag_level"
            app:layout_constraintTop_toBottomOf="@id/tv_name"
            tools:text="In Training"/>
    </androidx.constraintlayout.widget.ConstraintLayout>


</com.google.android.material.card.MaterialCardView>