<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="12dp"
    android:layout_marginVertical="6dp"
    app:cardElevation="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/main_yellow">

        <TextView
            android:id="@+id/tv_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="23/05/2026 18:19:56"
            android:textColor="@color/main_gray"
            android:textSize="12sp"
            android:textStyle="normal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="4dp"
            android:layout_marginStart="6dp"/>

        <TextView
            android:id="@+id/tv_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            android:textColor="@color/main_gray"
            android:layout_marginTop="4dp"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_delete_score"
            android:layout_width="40dp"
            android:layout_height="40dp"
            app:iconSize="40dp"
            app:iconGravity="textStart"
            app:icon="@drawable/btn_exit"
            app:iconTint ="@color/alert_orange"
            style="@style/Widget.Material3.Button.TextButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/tag_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/success"
            android:textColor="@color/main_gray"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_score" />

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="8dp"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tag_score">

            <TableRow>
                <TextView
                    android:text="@string/errors"
                    android:textColor="@color/main_gray"
                    android:textSize="16sp"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/tv_errors"
                    android:text="22"
                    android:paddingStart="4dp"
                    android:textColor="@color/main_gray"
                    android:textSize="16sp"
                    android:textStyle="normal"
                    android:paddingEnd="8dp"/>

                <TextView
                    android:text="@string/attempts"
                    android:textColor="@color/main_gray"
                    android:textSize="16sp"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/tv_attempts"
                    android:text="244"
                    android:paddingStart="4dp"
                    android:textColor="@color/main_gray"
                    android:textSize="16sp"
                    android:paddingEnd="8dp"
                    android:textStyle="normal"/>

                <TextView
                    android:text="@string/level_score"
                    android:textColor="@color/main_gray"
                    android:textSize="16sp"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/tv_level"
                    android:text="0"
                    android:paddingStart="4dp"
                    android:textColor="@color/main_gray"
                    android:textSize="16sp"
                    android:paddingEnd="8dp"
                    android:textStyle="normal"/>
            </TableRow>
        </TableLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>