<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/secondary_yellow"
    tools:context=".presentation.game.GameFragment">

    <ProgressBar
        android:id="@+id/progress_circular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminateTint="@color/main_blue"
        android:progressTint="@color/main_yellow"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageButton
        android:id="@+id/btn_exit"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="6dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/btn_exit"
        android:contentDescription="@string/exit_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/tv_hearts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="8dp"
        android:textColor="@color/main_gray"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_heart"
        android:layout_width="38dp"
        android:layout_height="38dp"
        android:layout_marginTop="34dp"
        android:layout_marginEnd="3dp"
        android:background="@drawable/icon_heart"
        android:contentDescription="icon heart"
        app:layout_constraintEnd_toStartOf="@id/tv_hearts"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_hints"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="8dp"
        android:textColor="@color/main_gray"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_hearts" />

    <ImageView
        android:id="@+id/iv_hints"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="6dp"
        android:backgroundTint="@color/main_yellow"
        android:layout_marginEnd="3dp"
        android:background="@drawable/icon_hint"
        android:contentDescription="icon hint"
        app:layout_constraintEnd_toStartOf="@id/tv_hints"
        app:layout_constraintTop_toBottomOf="@id/iv_heart" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/memory"
        android:textColor="@color/main_gray"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/sub_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/find_the_digimon"
        android:textColor="@color/secondary_gray"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title" />


    <com.google.android.material.circularreveal.cardview.CircularRevealCardView
        android:id="@+id/cv_digimon"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_marginTop="6dp"
        android:backgroundTint="@color/main_green"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sub_title"
        app:strokeColor="@color/main_gray"
        app:strokeWidth="2dp">

        <ImageView
            android:id="@+id/iv_digimon"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="center" />

    </com.google.android.material.circularreveal.cardview.CircularRevealCardView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_cards"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="30dp"
        android:overScrollMode="never"
        android:visibility="gone"
        app:fastScrollEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cv_digimon" />

    <View
        android:id="@+id/v_block"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:focusable="true"
        android:visibility="visible"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_hint"
        android:layout_width="160dp"
        android:layout_height="50dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="18dp"
        android:backgroundTint="@color/main_yellow"
        android:text="Hint"
        android:textAlignment="center"
        android:textColor="@color/main_gray"
        android:textSize="18sp"
        android:visibility="gone"
        app:cornerRadius="8dp"
        app:icon="@drawable/icon_hint"
        app:iconGravity="textEnd"
        app:iconSize="28dp"
        app:iconTint="@color/main_gray"
        app:layout_constraintEnd_toStartOf="@id/btn_change"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rv_cards" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_change"
        android:layout_width="160dp"
        android:layout_height="50dp"
        android:layout_marginTop="6dp"
        android:backgroundTint="@color/main_orange"
        android:text="Change"
        android:textAlignment="center"
        android:textColor="@color/main_gray"
        android:textSize="18sp"
        android:visibility="gone"
        app:cornerRadius="8dp"
        app:icon="@drawable/icon_omit"
        app:iconGravity="textEnd"
        app:iconSize="28dp"
        app:iconTint="@color/main_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_hint"
        app:layout_constraintTop_toBottomOf="@id/rv_cards" />

</androidx.constraintlayout.widget.ConstraintLayout>